[package]
name = "token-contract"
version = "0.1.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"
description = "Basic implementation of a token-contract"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instanti`ate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.2", features = ["staking"] }
cw-storage-plus = { version = "0.8.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cw20 = { version = "0.8.1" }
cw20-base = { version = "0.8.1", features = ["library"] }
cw0 = { version = "0.8.1" }
cw2 = { version = "0.8.1" }
cw-controllers = { version = "0.8.1" }
arrayref = "0.3.6"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
